--- a/presentations/CartoFlux.html
+++ b/presentations/CartoFlux.html
@@ -4,7 +4,7 @@
     <title>Enjeux rhétoriques</title>
     <meta charset="utf-8" />
     <meta name="author" content="Nicolas Lambert" />
-    <meta name="date" content="2021-09-29" />
+    <meta name="date" content="2021-09-30" />
     <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -25,7 +25,7 @@ background-size: cover
 
 ## Ecole thématique TRANSCARTO, Aussois.
 
-### Nicolas Lambert, (2021-09-29) - nicolas.lambert@cnrs.fr
+### Nicolas Lambert, (2021-09-30) - nicolas.lambert@cnrs.fr
 
 .logo[
 &lt;img src ="img/cnrs.gif"&gt;&lt;/img&gt;
@@ -34,6 +34,15 @@ background-size: cover
 ---
 class: inverse middle center 
 La rhétorique en cartographie
+
+---
+Demarer par les liens 1 lien, 2 liens, 3 liens... Bcp de liens... =&gt; Impossible. Il faut faire des choix.
+Démmarer par la phrase de Lordon
+On ne pense jamais qu'avec ses affects....
+Article carte à abbatre (mettre en lien aussi)
+Citer le texte de Migreurop avec reka, raison et affects. 
+Sur les fleches rouges, lire et racibter l'article de Vanhouten
+https://www.tandfonline.com/doi/pdf/10.1080/17450101.2019.1676031?needAccess=true
 
 
 ---
@@ -49,7 +58,7 @@ class: middle
 ---
 class: middle
 # La rhétorique en cartographie
-.center[&lt;img src="img/fig03 - rats-01.png" width=92%&gt;&lt;br/&gt;.note[William Bunge]]
+.center[&lt;img src="img/fig03 - rats-01.png" width=92%&gt;&lt;br/&gt;.note[William Bunge &amp; Gwendolyn Warren]]
 
 ---
 class: inverse middle center 
@@ -76,7 +85,7 @@ L'échelle
 
 ---
 class: inverse middle center 
-Le maillage
+Le maillage (MAUP)
 
 ---
 class: inverse middle center 
