--- a/presentations/CartoFlux.html
+++ b/presentations/CartoFlux.html
@@ -4,7 +4,7 @@
     <title>Enjeux rhétoriques</title>
     <meta charset="utf-8" />
     <meta name="author" content="Nicolas Lambert" />
-    <meta name="date" content="2021-10-07" />
+    <meta name="date" content="2021-10-12" />
     <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
@@ -25,7 +25,7 @@ background-size: cover
 
 ## Ecole thématique TRANSCARTO, Aussois.
 
-### Nicolas Lambert, (2021-10-07) - nicolas.lambert@cnrs.fr
+### Nicolas Lambert, (2021-10-12) - nicolas.lambert@cnrs.fr
 
 .logo[
 &lt;img src ="img/cnrs.gif"&gt;&lt;/img&gt;
@@ -303,6 +303,11 @@ Qui plus est, la migration des sans-papiers est souvent tout sauf une ligne droi
 # Alternatives (circulation)
 .center[&lt;img src="img/rekaroue.jpg" width=70%&gt;]
 
+???
+
+« La grande roue africaine » - Esquisse présentée au musée d'art moderne à Vienne (Autriche) en novembre 2007 lors de l'exposition "Waypoint to Sharon Stone" (Rendez-vous à Sharon Stone).
+
+« L’Afrique sauve l’Europe, qui appauvrit l’Afrique, qui nourrit l’Europe, qui asservit l’Afrique, qui paye l’Europe, qui continue de piller l’Afrique… (...)" 
 
 ---
 class: inverse middle center 
